--- a/app/src/main/res/layout/item_schedule_row.xml
+++ b/app/src/main/res/layout/item_schedule_row.xml
@@ -1,68 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="6">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tvTime"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="Time" />
+        android:text="Time"
+        android:minLines="2" />
 
     <TextView
         android:id="@+id/tvMon"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="" />
+        android:text=""
+        android:minLines="2" />
 
     <TextView
         android:id="@+id/tvTue"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="" />
+        android:text=""
+        android:minLines="2" />
 
     <TextView
         android:id="@+id/tvWed"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="" />
+        android:text=""
+        android:minLines="2" />
 
     <TextView
         android:id="@+id/tvThu"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="" />
+        android:text=""
+        android:minLines="2" />
 
     <TextView
         android:id="@+id/tvFri"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="16dp"
         android:background="@drawable/cell_border"
         android:gravity="center"
-        android:text="" />
+        android:text=""
+        android:minLines="2" />
 
 </LinearLayout>
