--- a/app/src/main/res/layout/item_subject.xml
+++ b/app/src/main/res/layout/item_subject.xml
@@ -6,6 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:background="@color/white"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="2dp"
     app:cardCornerRadius="8dp">
 
