--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.StudentApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.StudentApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryVariant">@color/dark_green</item>
         <item name="colorOnPrimary">@color/white</item>
         
         <!-- Text colors -->
@@ -18,7 +18,7 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@color/dirty_white</item>
     </style>
 
     <style name="Theme.StudentApp" parent="Base.Theme.StudentApp" />
